--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | [Challenge Name Here]</title>
 
@@ -13,10 +13,30 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-  Samuel Green
+  <div class="bg"></div>
+
+  <div class="container">
+    <div class="container__item">
+      <div class="illustration"></div>
+    </div>
+    <div class="container__item">
+      <div class="text-wrapper">
+        <h1 class="title">Simple booking</h1>
+        <p class="text">
+          Stay in touch with our dog walkers through the chat interface. This makes it easy to 
+          discuss arrangements and make bookings. Once the walk has been completed you can rate 
+          your walker and book again all through the chat.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Samuel Green
   Available to Walk
 
   That sounds great. I’d be happy with that.
@@ -35,17 +55,14 @@
   1 hour walk
   $49
 
-  Type a message…
+  Type a message… -->
 
-  Simple booking
-
-  Stay in touch with our dog walkers through the chat interface. This makes it easy to 
-  discuss arrangements and make bookings. Once the walk has been completed you can rate 
-  your walker and book again all through the chat.
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/usignak" target="_blank">Usigna</a>.
   </div>
+
+  <script src="js/app.js"></script>
 </body>
 </html>
